syntax = "proto3";

package user;

option go_package = "e-wallet/proto/user";

message CreateUserRequest {
    string name = 1;
    string email = 2;
}

message CreateUserResponse {
    int32 user_id = 1;
    string message = 2;
}

message GetUserRequest {
    int32 user_id = 1;
}

message GetUserResponse {
    int32 user_id = 1;
    string name = 2;
    string email = 3;
    float balance = 4;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
}
